bug #14181. Reviewed by pnunn.  Fixed crash when loading large (or slow) animated GIF images on linux.